--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "start": "ember server",
     "test": "ember try:each"
   },
-  "repository": "",
+  "repository": "pixelhandler/ember-fetchjax",
   "engines": {
     "node": ">= 0.12.0"
   },
